GenericSetup Product Changelog

  GenericSetup 1.3-beta (unreleased)

    - Removed the 'create_report' decoy in the ZMI view methods:  there was
      never any UI for passing any value other than the default, anyway, and
      the report objects are too useful to omit.

    - Refactored the "Properties" tab to separate baseline profiles from
      extension profiles, marking the option to reset the baseline as
      potentially dangerous for sites which already have one.  Allow
      importing one or more extension profiles directly (all steps) from the 
      "Properties" tab.

    - No longer read the toolset xml and update the toolset regustry on
      import context change.  Doing this only during the toolset step import
      should be sufficient.

    - testing: The test base classes no longer set up any ZCML.
      This change is not backwards compatible. If you are using these base
      classes for testing custom handlers, you have to add the necessary ZCML
      setup and tear down. Using test layers is recommended.

    - Added support for importing/exporting Zope 3 component registries
      by folding in Hanno Schlichting's GSLocalAddons product.


  GenericSetup 1.2-beta (2006/09/20)

    - tool:  Added support for uploading a tarball on the "Import" tab
      (i.e., one produced on the export tab).

    - docs: Added SampleSite demo product.

    - ProfileRegistry: Added 'registerProfile' ZCML directive.
      Using the old registerProfile method in initialize() is now deprecated.
      See doc/profiles.txt for details.

    - ProfileRegistry: 'product' should now be the module name.
      For backwards compatibility 'product' is still first looked up in
      Products before searching the default module search path.

    - ZCTextIndex handler: Fixed 'indexed_attr' import.
      (http://www.zope.org/Collectors/CMF/436)

    - docs: Added 'Registering Profiles' section to profiles.txt.
